...
                    <view key="view" hidden="YES" contentMode="scaleToFill" id="vRL-GP-7uu">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azU-iF-Y8n">
                                <rect key="frame" x="147" y="221" width="120" height="30"/>
                                <state key="normal" title="Facebook Sign-in"/>
                                <connections>
                                    <action selector="facebookSignInBtnTapped:" destination="ea7-KK-dHZ" eventType="touchUpInside" id="pXF-EN-TQU"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lii-DM-00r">
                                <rect key="frame" x="25" y="20" width="37" height="30"/>
                                <state key="normal" title="close"/>
                                <connections>
                                    <action selector="closeBtnTapped:" destination="ea7-KK-dHZ" eventType="touchUpInside" id="jA3-ip-KvU"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="6" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iza-NC-BXN">
                                <rect key="frame" x="20" y="259" width="374" height="21"/>
...
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kTe-87-ZQW">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="155"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XXVI" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="fpn-le-T7z">
                                                <rect key="frame" x="16" y="0.0" width="382" height="155"/>
                                                <accessibility key="accessibilityConfiguration" identifier="calculated_value"/>
                                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="100"/>
                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <constraints>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDp-wd-HSs">
                                                <rect key="frame" x="310.66666666666674" y="0.0" width="103.33333333333331" height="118"/>
                                                <color key="backgroundColor" red="0.92549019607843142" green="0.71372549019607845" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="18"/>
                                                <state key="normal" title="Clear"/>
                                                <connections>
                                                    <action selector="actionClear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0MB-01-tDb"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
